[package]
name = "procedural_fitness"
version = "0.1.0"
authors = ["GrumpyMetalGuy"]
license-file = "LICENSE"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
charts-rs = {  version="0.1", features = ["image"]  }
directories="5.0"
itertools="0.11"
log = "0.4"
log4rs = "1.1"
plotlib="0.5"
rand="0.8"
rand_xorshift="0.3"
rand_xoshiro = "0.6"
thiserror = "1.0"
